--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
   "cmake.configureOnOpen": false,
   "files.associations": {
     ".dockerignore": "plaintext",
-    "*.tcc": "cpp"
+    "*.tcc": "cpp",
+    "string_view": "cpp"
   }
 }
