Handle all request types

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
     ".dockerignore": "plaintext",
     "*.tcc": "cpp",
     "string_view": "cpp",
-    "array": "cpp"
+    "array": "cpp",
+    "random": "cpp"
   }
 }
