--- a/platformio.ini
+++ b/platformio.ini
@@ -15,3 +15,8 @@ framework = arduino
 lib_deps = 
 	waspinator/AccelStepper@^1.64
 	paulstoffregen/Encoder@^1.4.2
+
+[env:teensy35]
+platform = teensy
+board = teensy35
+framework = arduino
