--- a/platformio.ini
+++ b/platformio.ini
@@ -8,15 +8,20 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:teensy41]
+[env:cobot0]
 platform = teensy
 board = teensy41
 framework = arduino
 lib_deps = 
 	waspinator/AccelStepper@^1.64
 	paulstoffregen/Encoder@^1.4.2
+build_flags = -D COBOT_ID=0
 
-[env:teensy35]
+[env:cobot1]
 platform = teensy
 board = teensy35
 framework = arduino
+lib_deps = 
+	waspinator/AccelStepper@^1.64
+	paulstoffregen/Encoder@^1.4.2
+build_flags = -D COBOT_ID=1
