--- a/platformio.ini
+++ b/platformio.ini
@@ -8,10 +8,54 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:teensy41]
+[env:cobot0]
 platform = teensy
 board = teensy41
 framework = arduino
 lib_deps = 
 	waspinator/AccelStepper@^1.64
 	paulstoffregen/Encoder@^1.4.2
+build_flags = -D COBOT_ID=0
+
+[env:cobot1]
+platform = teensy
+board = teensy35
+framework = arduino
+lib_deps = 
+	waspinator/AccelStepper@^1.64
+	paulstoffregen/Encoder@^1.4.2
+build_flags = -D COBOT_ID=1
+
+
+[env:cobot0_debug]
+platform = teensy
+board = teensy41
+framework = arduino
+lib_deps = 
+	waspinator/AccelStepper@^1.64
+	paulstoffregen/Encoder@^1.4.2
+
+; See https://github.com/platformio/platform-teensy/issues/65
+build_unflags = -D USB_SERIAL
+build_flags =
+  -D DEBUGGING
+	-D COBOT_ID=0
+	-D USB_DUAL_SERIAL
+build_type = debug
+debug_port = \\.\COM9 
+debug_tool = custom
+debug_load_mode = manual
+debug_server = 
+debug_init_cmds =
+  target extended-remote $DEBUG_PORT
+  $INIT_BREAK
+  define pio_reset_run_target
+  interrupt
+  tbreak loop
+  continue
+  end
+  define pio_restart_target
+  echo Restart is undefined for now.
+  end
+
+debug_init_break =
