--- a/platformio.ini
+++ b/platformio.ini
@@ -15,7 +15,7 @@ framework = arduino
 lib_deps = 
 	waspinator/AccelStepper@^1.64
 	paulstoffregen/Encoder@^1.4.2
-	arduino-libraries/Servo@^1.2.1
+	paulstoffregen/PWMServo@^2.1
 build_flags = -D COBOT_ID=0
 
 [env:cobot1]
@@ -25,7 +25,7 @@ framework = arduino
 lib_deps = 
 	waspinator/AccelStepper@^1.64
 	paulstoffregen/Encoder@^1.4.2
-	arduino-libraries/Servo@^1.2.1
+	paulstoffregen/PWMServo@^2.1
 build_flags = 
 	-D COBOT_ID=1
 	-llibc -lc
