--- a/platformio.ini
+++ b/platformio.ini
@@ -16,7 +16,9 @@ lib_deps =
 	waspinator/AccelStepper@^1.64
 	paulstoffregen/Encoder@^1.4.2
 	paulstoffregen/PWMServo@^2.1
-build_flags = -D COBOT_ID=0
+	robtillaart/AS5600@^0.6.1
+build_unflags = -std=gnu++14
+build_flags = -D COBOT_ID=0 -std=gnu++17
 
 [env:cobot1]
 platform = teensy
@@ -26,6 +28,7 @@ lib_deps =
 	waspinator/AccelStepper@^1.64
 	paulstoffregen/Encoder@^1.4.2
 	paulstoffregen/PWMServo@^2.1
+	robtillaart/AS5600@^0.6.1
 build_flags = 
 	-D COBOT_ID=1
 	-llibc -lc
